@@ -84,6 +84,7 @@ static void compatInit(Compatibility_t &c)
     c.sfx_player_grow_with_got_item = Compatibility_t::SPGWGI_UNSPECIFIED;
     // 1.3.5.4
     c.fix_fairy_stuck_in_pipe = true;
+    c.fix_flamethrower_gravity = true;
     // 1.3.6
 
     if(s_compatLevel >= COMPAT_SMBX2) // Make sure that bugs were same as on SMBX2 Beta 4 on this moment
@@ -115,6 +116,7 @@ static void compatInit(Compatibility_t &c)
         c.fix_npc_activation_event_loop_bug = false;
         // 1.3.5.4
         c.fix_fairy_stuck_in_pipe = false;
+        c.fix_flamethrower_gravity = false;
         // 1.3.6
     }
 
@@ -216,6 +218,7 @@ static void loadCompatIni(Compatibility_t &c, const std::string &fileName)
         compat.readEnum("world-map-stars-show-policy", c.world_map_stars_show_policy, c.world_map_stars_show_policy, starsShowPolicy);
         // 1.3.5.4
         compat.read("fix-fairy-stuck-in-pipe", c.fix_fairy_stuck_in_pipe, c.fix_fairy_stuck_in_pipe);
+        compat.read("fix-framethrower-gravity", c.fix_flamethrower_gravity, c.fix_flamethrower_gravity);
         // 1.3.6
     }
     // 1.3.4
