@@ -75,6 +75,7 @@ struct Compatibility_t
     int sfx_player_grow_with_got_item;
     // 1.3.5.4
     bool fix_fairy_stuck_in_pipe;
+    bool fix_flamethrower_gravity;
     // 1.3.6
 
     // SpeedRun section
